--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,5 @@
-<h2>Bienvenue sur notre premiere page !!</h2>
+<h2>Bienvenue sur notre premiere page de Charles !!</h2>
+
+<%= link_to 'Inscripition', new_user_registration_path %>
+<%= link_to 'Connexion', new_user_session_path %>
+<%= link_to 'Déconnexion', destroy_user_session_path, method: :delete %>
